[package]
name = "dstore"
version = "0.2.0"
authors = ["Devdutt Shenoi <devdutt@outlook.in>"]
license = "Apache-2.0"
description = "A partially distributed storage framework, using the two-layer architecture."
homepage = "https://vyuham.github.io/dstore"
edition = "2018"

[dependencies]
tokio = { version = "1.5", features = ["full"] }
tokio-stream = { version =  "0.1", features = ["net"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
bytes = "1"
tonic = "0.4"
prost = "0.7"

[build-dependencies]
tonic-build = "0.4"
